<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/searchID"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/SearchID"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/saveID"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/LikeID"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/bookmarkID"
        android:icon="@drawable/ic_bookmark_black_24dp"
        android:title="@string/BookID"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/locationID"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/LocationID"
        app:showAsAction="never"
        />
    <item android:id="@+id/helpID"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/HelpID"
        app:showAsAction="ifRoom"
        />
    <item android:id="@+id/refreshID"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/RefreshID"
        app:showAsAction="withText" />
        <!-- displays text with icon in action bar -->

</menu>